--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,39 @@
-# PyTorch CPU version
-torch==2.0.1
-torchvision==0.15.2
+# Deep Learning Libraries
+tensorflow>=2.5.0
+keras>=2.4.0
+torch>=2.0.1
+torchvision>=0.15.2
+
+# Image Processing
+opencv-python>=4.5.3
+Pillow>=8.3.1
+scikit-image>=0.19.0  # For structural similarity index (SSIM)
+
+# Data Processing
+numpy>=1.20.0
+pandas>=1.3.2
+scikit-learn>=0.24.2
+matplotlib>=3.4.3
+seaborn>=0.11.2
+
+# Web Application
+Flask>=2.0.1
+Flask-SocketIO>=5.1.1
+gunicorn>=20.1.0
+
+# Utilities
+tqdm>=4.62.2
+ipython>=7.27.0
+jupyter>=1.0.0
+imutils>=0.5.4
+
+# CUDA support (optional)
+# cudatoolkit>=11.0
+# cudnn>=8.0
+
+# Additional Libraries
 torchaudio==2.0.2
-opencv-python>=4.5.0
-pandas>=1.3.0
 openpyxl>=3.0.0
 sqlalchemy>=1.4.0
-pillow>=8.0.0
-numpy>=1.20.0
-matplotlib>=3.4.0
-tqdm>=4.60.0
+scipy>=1.7.0  # For entropy calculation in anti-spoofing
 PyQt5>=5.15.0
